--- a/package.json
+++ b/package.json
@@ -10,14 +10,8 @@
   "author": "Stefan Koolen <nast3zz@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.13.0",
-    "cloudscraper": "^1.1.2",
-    "express": "^4.12.4",
-    "anime-scraper": "^1.1.2",
-    "morgan": "^1.6.0",
-    "cookie-parser": "^1.3.5",
-    "serve-favicon": "^2.3.0",
-    "path": "^0.11.14"
+    "anime-scraper": "^2.1.3",
+    "express": "^4.12.4"
   },
   "bugs": {
     "url": "https://github.com/eligioo/node-kissanime-api/issues"
